fix(components): fix SwirlImageGrid layout shifts while loading

--- a/packages/swirl-components/src/components/swirl-image-grid-item/swirl-image-grid-item.css
+++ b/packages/swirl-components/src/components/swirl-image-grid-item/swirl-image-grid-item.css
@@ -70,6 +70,12 @@ button.image-grid-item {
   object-position: center;
 }
 
+.image-grid-item__loading-placeholder {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+}
+
 .image-grid-item__icon {
   position: absolute;
   z-index: 1;
